# rag-based-streamlit

./: README.md  pyproject.toml  requirements.txt  streamlitragv2.py
.streamlit/: pyproject.toml
frontend/: streamlitragv2.py
persist_directory/: chroma.sqlite3
persistent_directory/: chroma.sqlite3
